  => --disable-KDE and --disable-noatun switches removed from configure script
- repaired broken noatun communication behavior (apparently due to newer version of noatun)
- applied patch from Luis (thanks!!!):
  - support for arts media player
  - changes towards making yammi a proper kde application
- added consistency check which checks location of a file (not correcting yet)

MINOR CHANGES:
- added a button to add standard plugins
- added an automatic folder "by year"
- simplified placeholder usage in plugins ({artist} instead of %a)
- changed the xpm icons to png icons that get installed
- added (ugly) application icons in 16x16, 32x32, 48x48, 64x64

######################
24.10.2003 version 1.0
- added a "go to fuzzy folder" functionality using yammi's fuzzy search capabilities for switching to a folder:
  press Ctrl-G to switch to the folder best matching your search term
  (press multiple times to iterate over the best matches)
- added a virtual "Not on media" subfolder to media folder
  (to quickly access all songs not contained on any media)
- finished replacing the "butt ugly" icons (thanks to Sandra for her artwork!)
- put prelisten toolbuttons in a separate toolbar
- improved german translation (thanks to various contributors)
- added hungarian translation (thanks to Marcel)
- fixed: sorting in "Recently Added" folder
- fixed: scanning removable media: take directory from dialog, not settings
- fixed: memory leak in folder.cpp (thanks for the patch, David)
- fixed: crash when applying "clear playlist" to an empty playlist
- fixed: "cannot move songs in playlist"-bug


########################
31.08.2003 version 1.0-rc1
- implemented "reread tags from file" functionality in consistency check
- started improving the icons, thanks to Sandra (to be finished...)
- added the possibility to ignore case in filename check (tick the checkbox in the settings)
- checking for existence of directory "categories" before saving, creating it if necessary