@@ -3,13 +3,52 @@
 <KDevPrjSession>
  <LastCompileConfig>(Default)</LastCompileConfig>
  <Mainframe MaximizeMode="1" />
- <DocsAndViews NumberOfDocuments="2" >
-  <Doc0 CursorPosLine="8" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="21" FileName="/home/brian/work/programming/yammi/yammi/Makefile.am" >
+ <DocsAndViews NumberOfDocuments="15" >
+  <Doc0 CursorPosLine="0" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/brian/work/programming/yammi/yammi/Makefile.am" >
    <View0 Top="25" Width="400" Attach="1" Height="300" Left="3" Focus="0" Type="KWriteView" MinMaxMode="0" />
   </Doc0>
   <Doc1 CursorPosLine="195" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/brian/work/programming/yammi/configure.in" >
-   <View0 Top="23" Width="754" Attach="1" Height="435" Left="23" Focus="1" Type="KWriteView" MinMaxMode="2" />
+   <View0 Top="48" Width="748" Attach="1" Height="417" Left="26" Focus="0" Type="KWriteView" MinMaxMode="0" />
   </Doc1>
+  <Doc2 CursorPosLine="18" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/brian/work/programming/yammi/CHANGELOG" >
+   <View0 Top="71" Width="748" Attach="1" Height="407" Left="49" Focus="0" Type="KWriteView" MinMaxMode="0" />
+  </Doc2>
+  <Doc3 CursorPosLine="1227" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="20" FileName="/home/brian/work/programming/yammi/yammi/song.cpp" >
+   <View0 Top="94" Width="748" Attach="1" Height="407" Left="72" Focus="0" Type="KWriteView" MinMaxMode="0" />
+  </Doc3>
+  <Doc4 CursorPosLine="143" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/brian/work/programming/yammi/yammi/song.h" >
+   <View0 Top="117" Width="748" Attach="1" Height="407" Left="95" Focus="0" Type="KWriteView" MinMaxMode="0" />
+  </Doc4>
+  <Doc5 CursorPosLine="48" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/brian/work/programming/yammi/yammi/prefs.cpp" >
+   <View0 Top="140" Width="748" Attach="1" Height="407" Left="118" Focus="0" Type="KWriteView" MinMaxMode="0" />
+  </Doc5>
+  <Doc6 CursorPosLine="839" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/brian/work/programming/yammi/yammi/yammimodel.cpp" >
+   <View0 Top="163" Width="748" Attach="1" Height="407" Left="141" Focus="0" Type="KWriteView" MinMaxMode="0" />
+  </Doc6>
+  <Doc7 CursorPosLine="407" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/brian/work/programming/yammi/yammi/preferencesdialog.cpp" >
+   <View0 Top="186" Width="748" Attach="1" Height="407" Left="164" Focus="0" Type="KWriteView" MinMaxMode="0" />
+  </Doc7>
+  <Doc8 CursorPosLine="63" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="28" FileName="/home/brian/work/programming/yammi/yammi/preferencesdialog.h" >
+   <View0 Top="209" Width="748" Attach="1" Height="407" Left="187" Focus="0" Type="KWriteView" MinMaxMode="0" />
+  </Doc8>
+  <Doc9 CursorPosLine="3603" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/brian/work/programming/yammi/yammi/yammigui.cpp" >
+   <View0 Top="232" Width="748" Attach="1" Height="407" Left="210" Focus="0" Type="KWriteView" MinMaxMode="0" />
+  </Doc9>
+  <Doc10 CursorPosLine="13" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/brian/work/programming/yammi/TODO" >
+   <View0 Top="255" Width="748" Attach="1" Height="407" Left="233" Focus="0" Type="KWriteView" MinMaxMode="0" />
+  </Doc10>
+  <Doc11 CursorPosLine="49" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="17" FileName="/home/brian/work/programming/yammi/yammi/ConsistencyCheckParameter.h" >
+   <View0 Top="278" Width="748" Attach="1" Height="407" Left="256" Focus="0" Type="KWriteView" MinMaxMode="0" />
+  </Doc11>
+  <Doc12 CursorPosLine="137" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/brian/work/programming/yammi/yammi/yammimodel.h" >
+   <View0 Top="301" Width="748" Attach="1" Height="407" Left="279" Focus="0" Type="KWriteView" MinMaxMode="0" />
+  </Doc12>
+  <Doc13 CursorPosLine="68" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/brian/work/programming/yammi/yammi/prefs.h" >
+   <View0 Top="324" Width="748" Attach="1" Height="407" Left="302" Focus="0" Type="KWriteView" MinMaxMode="0" />
+  </Doc13>
+  <Doc14 CursorPosLine="23" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/brian/work/programming/yammi/yammi/ConsistencyCheckDialog.cpp" >
+   <View0 Top="322" Width="754" Attach="1" Height="435" Left="322" Focus="1" Type="KWriteView" MinMaxMode="2" />
+  </Doc14>
  </DocsAndViews>
  <CompileConfigs>
   <Release>
